# webvh-build-pipeline

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
did-hosting-client/: Cargo.toml
did-hosting-client/src/: authed.rs  client.rs  error.rs  lib.rs  locks.rs  token_store.rs  transport.rs  trust_tasks.rs
did-hosting-client/src/auth/: message.rs  mod.rs
did-hosting-client/tests/: wiremock_integration.rs
did-hosting-common/: Cargo.toml  README.md
did-hosting-common/examples/: gen_corpus.rs
did-hosting-common/src/: client.rs  control_client.rs  did.rs  did_hosting_tasks.rs  did_ops.rs  didcomm_types.rs  error.rs  lib.rs  types.rs  v1_aliases.rs  watcher_client.rs  witness_client.rs
did-hosting-common/src/method/: mod.rs  parse.rs  web.rs  webplus.rs  webs.rs  webvh.rs
did-hosting-common/src/server/: acl.rs  assignment.rs  assignment_seed.rs  cli_acl.rs  cli_identity.rs  config.rs  didcomm_profile.rs  didcomm_unpack.rs  domain_purge.rs  error.rs  health.rs  identity.rs  identity_drain.rs  identity_rotate.rs  init.rs  metrics.rs  mnemonic.rs  mod.rs  operator_messages.rs  path_locks.rs  pending_purge.rs  problem_report.rs  setup_prompts.rs  stats_collector.rs  vta_setup.rs
did-hosting-common/src/server/auth/: backend.rs  extractor.rs  jwt.rs  mod.rs  session.rs
did-hosting-common/src/server/domain/: detect.rs  mod.rs  normalize.rs  safety.rs  scope.rs  seed.rs  store.rs  types.rs
did-hosting-common/src/server/migrations/: m01_tag_did_records_with_domain.rs  m02_cache_did_record_services.rs  mod.rs  runner.rs
did-hosting-common/src/server/passkey/: mod.rs  routes.rs
did-hosting-common/src/server/secret_store/: aws.rs  azure.rs  gcp.rs  k8s.rs  keyring.rs  mod.rs  plaintext.rs  wizard.rs
did-hosting-common/src/server/setup_recipe/: apply.rs  exit_codes.rs  load.rs  mod.rs  reprovision.rs  (+1 more)
did-hosting-common/tests/: offline_phase1.rs  recipe_examples.rs  secret_store_backends.rs  trust_task_url_consistency.rs
did-hosting-control/: Cargo.toml  README.md  build.rs
did-hosting-control/src/: acl.rs  config.rs  did_ops.rs  error.rs  frontend.rs  health.rs  identity_rotation.rs  lib.rs  main.rs  messaging.rs  outbox.rs  path_locks.rs  purge_sweep.rs  registry.rs  replay.rs  server.rs  server_push.rs  setup.rs  setup_recipe.rs  test_support.rs  trust_tasks_did.rs  trust_tasks_infra.rs  tsp.rs
did-hosting-control/src/auth/: backend.rs  mod.rs
did-hosting-control/src/routes/: acl.rs  auth.rs  confirm.rs  did_manage.rs  didcomm.rs  domain.rs  health.rs  identity.rs  mod.rs  passkey.rs  registry.rs  server_info.rs  stats_sync.rs  trust_tasks.rs
did-hosting-control/tests/: agent_names_rest.rs  change_owner_integration.rs  change_owner_rest.rs  didcomm_dispatcher.rs  didcomm_e2e_smoke.rs  multi_domain_acl.rs  self_managed_provisioning.rs  service_badge_backfill.rs  service_badges_rest.rs  trust_task_infra.rs  trust_task_parity.rs  vta_provisioned_auth.rs
did-hosting-daemon/: Cargo.toml  README.md
did-hosting-daemon/src/: config.rs  main.rs  setup.rs  setup_recipe.rs
did-hosting-server/: Cargo.toml  README.md  build.rs
did-hosting-server/examples/: agent_name_smoke.rs  client.rs  perf_test.rs
did-hosting-server/src/: backup.rs  bootstrap.rs  cache.rs  config.rs  control_register.rs  did_ops.rs  error.rs  health.rs  identity_rotation.rs  lib.rs  main.rs  messaging.rs  mnemonic.rs  openapi.rs  purge_sweep.rs  server.rs  setup.rs  setup_recipe.rs  trust_tasks_infra.rs  tsp.rs  watcher_push.rs
did-hosting-server/src/auth/: backend.rs  extractor.rs  jwt.rs  mod.rs  session.rs
did-hosting-server/src/routes/: acl.rs  auth.rs  config.rs  did_manage.rs  did_public.rs  health.rs  mod.rs  resolve_agent_name.rs  resolve_shared.rs  resolve_web.rs  resolve_webvh.rs  stats.rs
did-hosting-server/src/secret_store/: mod.rs
did-hosting-server/src/stats/: mod.rs
did-hosting-server/src/store/: mod.rs
did-hosting-server/tests/: agent_names.rs  migration_replay.rs  refresh_signer_binding.rs  smoke.rs  tsp_sync.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/validate_did_jsonl/: chain_deactivated.jsonl  chain_prerotation.jsonl  chain_simple.jsonl  chain_witnessed.jsonl
fuzz/fuzz_targets/: validate_did_id_matches_request.rs  validate_did_jsonl.rs  verify_did_log_proofs.rs  verify_did_log_proofs_structured.rs
webvh-common/: Cargo.toml  README.md
webvh-common/src/: client.rs  did.rs  did_ops.rs  didcomm_types.rs  types.rs
webvh-common/src/server/: acl.rs  config.rs  didcomm_unpack.rs  error.rs  mnemonic.rs  mod.rs  operator_messages.rs  vta_setup.rs
webvh-common/tests/: offline_phase1.rs  recipe_examples.rs
webvh-control/: Cargo.toml  README.md  build.rs
webvh-control/src/: config.rs  did_ops.rs  lib.rs  main.rs  messaging.rs  path_locks.rs  pending_challenges.rs  rate_limit.rs  registry.rs  replay.rs  server.rs  setup.rs  setup_recipe.rs
webvh-control/src/routes/: acl.rs  auth.rs  did_manage.rs  didcomm.rs  mod.rs  passkey.rs  proxy.rs  registry.rs  stats_sync.rs
webvh-control/tests/: change_owner_integration.rs  change_owner_rest.rs  didcomm_dispatcher.rs  didcomm_e2e_smoke.rs  self_managed_provisioning.rs
webvh-daemon/: Cargo.toml  README.md
webvh-daemon/src/: config.rs  main.rs  setup.rs  setup_recipe.rs
webvh-server/: Cargo.toml  README.md
webvh-server/examples/: client.rs  perf_test.rs
webvh-server/src/: lib.rs  main.rs  messaging.rs  server.rs  setup.rs  setup_recipe.rs
webvh-server/src/routes/: acl.rs  auth.rs  did_public.rs
webvh-server/tests/: smoke.rs
webvh-watcher/: Cargo.toml  README.md
webvh-watcher/src/: config.rs  error.rs  health.rs  lib.rs  main.rs  server.rs  setup.rs  store.rs
webvh-watcher/src/routes/: did_public.rs  sync.rs
webvh-witness/: CHANGELOG.md  Cargo.toml  README.md
webvh-witness/src/: config.rs  error.rs  health.rs  identity_rotation.rs  lib.rs  main.rs  messaging.rs  server.rs  setup.rs  setup_recipe.rs  signing.rs  witness_ops.rs
webvh-witness/src/auth/: backend.rs  mod.rs
webvh-witness/src/routes/: acl.rs  auth.rs  didcomm.rs  witness.rs
(+112 files in other folders)
