[workspace]
members = [
  "did-hosting-client",
  "did-hosting-common",
  "did-hosting-control",
  "did-hosting-daemon",
  "did-hosting-server",
  "webvh-watcher",
  "webvh-witness",
]
resolver = "3"

[workspace.package]
description = "Affinidi DID Hosting Service. Collection of services to operate WebVH DID in production"
edition = "2024"
authors = ["Glenn Gore <glenn@affinidi.com>"]
readme = "README.md"
homepage = "https://affinidi.com/"
license = "Apache-2.0"
keywords = ["ssi", "affinidi", "webvh"]
repository = "https://github.com/affinidi/did-hosting-service"
publish = true
rust-version = "1.95.0"

[workspace.dependencies]

# Affinidi Trust Development Kit
affinidi-tdk = "0.7"
affinidi-messaging-didcomm-service = "0.3"
affinidi-tdk-common = "0.6"
affinidi-messaging-didcomm = "0.14"
affinidi-secrets-resolver = "0.5"


# Cancellation token for DIDComm service
tokio-util = { version = "0.7", features = ["rt"] }

# Async runtime
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "sync",
  "signal",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Embedded key-value store
fjall = "3"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.10"

# Cryptography
ed25519-dalek = "2"
multibase = "0.9"

# JWT
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Axum extras (typed headers for Bearer auth)
axum-extra = { version = "0.12", features = ["typed-header"] }

# Base64 encoding
base64 = "0.22"

# WebAuthn / Passkey
webauthn-rs = { version = "0.5", features = [
  "danger-allow-state-serialisation",
] }
webauthn-rs-proto = "0.5"
url = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Interactive prompts
dialoguer = "0.12"

# Static file embedding (for UI feature)
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

# DID resolver
affinidi-did-resolver-cache-sdk = "0.8"

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Error handling (lightweight)
anyhow = "1"

# DID WebVH
didwebvh-rs = "0.5"

# VTA SDK — 0.9 on crates.io, bumped in lockstep with vti-common 0.9.
# Carries the canonical SIOPv2 / RFC 6749 wire types
# (`protocols::auth::{Session, TokenBundle, AuthenticateResponse,
# ChallengeResponse, epoch_to_rfc3339}`) that the cross-repo
# auth-architecture work introduced. Keep vta-sdk and vti-common
# pinned to the same minor.
vta-sdk = { version = "0.9", features = [
  "session",
  "provision-integration",
  "provision-client",
  "client",
] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Trust Tasks (DTGWG, ToIP). Now on crates.io at 0.1.1 (DTGWG
# PR #36 merged + published 2026-05-24); the `[patch.crates-io]`
# git pin that lived here through the pre-publish window is gone.
# Bump to 0.1.x in lockstep with verifiable-trust-infrastructure
# when upstream publishes new patch releases.
#
# `validate` feature: deliberately NOT enabled. The codegen-emitted
# `Payload` structs use `#[serde(deny_unknown_fields)]` plus newtype
# wrappers that reject `minLength: 1` / regex constraints at
# deserialise time, so we get framework-shape + payload-shape
# validation as a side-effect of typed dispatch. The `validate`
# feature would add JSON-Schema-driven validation against the
# embedded schema string per request — redundant for our consumers
# and a compile-time tax we don't pay. Re-enable if a future spec
# carries constraints not captured by the codegen newtypes.
trust-tasks-rs = { version = "0.1", default-features = false }
trust-tasks-https = { version = "0.1", default-features = false, features = ["server", "client", "jwt"] }
trust-tasks-didcomm = { version = "0.1", default-features = false }
trust-tasks-proof = { version = "0.1", default-features = false, features = ["affinidi"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
