[workspace]
members = [
  "did-hosting-client",
  "did-hosting-common",
  "did-hosting-control",
  "did-hosting-daemon",
  "did-hosting-server",
  "webvh-watcher",
  "webvh-witness",
]
# `fuzz/` is a detached cargo-fuzz crate with its own [workspace]; keep it out
# of the root workspace so normal builds never pull the nightly libfuzzer deps.
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
description = "Affinidi DID Hosting Service. Collection of services to operate WebVH DID in production"
edition = "2024"
authors = ["Glenn Gore <glenn@affinidi.com>"]
readme = "README.md"
homepage = "https://affinidi.com/"
license = "Apache-2.0"
keywords = ["ssi", "affinidi", "webvh"]
repository = "https://github.com/affinidi/did-hosting-service"
publish = true
rust-version = "1.95.0"

[workspace.dependencies]

# Affinidi Trust Development Kit
# Moves in lockstep with vta-sdk / vti-common: vta-sdk 0.19 and vti-common
# 0.11.4 both depend on affinidi-tdk ^0.8, so all three resolve to a single
# affinidi-tdk copy. Drop back to 0.7 only if vta-sdk/vti-common ever re-pin.
affinidi-tdk = "0.8"
# `tsp` feature: routes inbound TSP frames on the shared mediator socket
# to the `TspHandler`. Without it the handler is stored but never invoked
# (the crate compiles TSP support out).
affinidi-messaging-didcomm-service = { version = "0.3", features = ["tsp"] }
affinidi-tdk-common = "0.6"
affinidi-messaging-didcomm = "0.15"
affinidi-secrets-resolver = "0.5"


# Cancellation token for DIDComm service
tokio-util = { version = "0.7", features = ["rt"] }

# Async runtime
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "sync",
  "signal",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Embedded key-value store
fjall = "3"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.10"

# Cryptography
ed25519-dalek = "2"
multibase = "0.9"

# JWT
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Axum extras (typed headers for Bearer auth)
axum-extra = { version = "0.12", features = ["typed-header"] }

# Base64 encoding
base64 = "0.22"

# WebAuthn / Passkey
webauthn-rs = { version = "0.5", features = [
  "danger-allow-state-serialisation",
] }
webauthn-rs-proto = "0.5"
url = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Interactive prompts
dialoguer = "0.12"

# Static file embedding (for UI feature)
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

# DID resolver
affinidi-did-resolver-cache-sdk = "0.8"

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Error handling (lightweight)
anyhow = "1"

# DID WebVH
# Agent names (DID shortcuts) — parsing, canonicalisation and the
# alsoKnownAs verification rule. Shared with the resolver side so both
# normalise identically.
agent-names = "0.1.3"
didwebvh-rs = "0.5"

# VTA SDK — 0.19 on crates.io, bumped in lockstep with vti-common 0.11.4
# (which re-pins onto vta-sdk ^0.19 + affinidi-tdk ^0.8). Carries the canonical SIOPv2 /
# RFC 6749 wire types (`protocols::auth::{Session, TokenBundle,
# AuthenticateResponse, ChallengeResponse, epoch_to_rfc3339}`) that the
# cross-repo auth-architecture work introduced. vta-sdk and vti-common
# share these types and MUST move together — a mismatched pair resolves
# to two vta-sdk copies and fails to compile (E0308 on AuthenticateResponse).
#
# `tsp` feature: enables the Trust Spanning Protocol client surface
# (`session::TspPingSession`, `atm.tsp().send/unpack`) that the TSP
# transport binding rides on. Pulls `affinidi-tdk/tsp` +
# `affinidi-messaging-sdk/tsp`.
vta-sdk = { version = "0.19", features = [
  "session",
  "provision-integration",
  "provision-client",
  "client",
  "tsp",
] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Trust Tasks (DTGWG, ToIP). On crates.io at 0.2.x — the family moved
# from 0.1 to 0.2 alongside the spec bump that introduced 0.2 versions
# of several auth/step-up/device/vault/etc specs. The 0.2 framework
# serialises StandardCode in camelCase but still reads the 0.1
# snake_case form on inbound, so peers on either version interoperate.
# The acl/* typed payloads we consume directly are still v0_1 in 0.2.x.
# Bump in lockstep with verifiable-trust-infrastructure when upstream
# publishes new releases.
#
# `validate` feature: deliberately NOT enabled. The codegen-emitted
# `Payload` structs use `#[serde(deny_unknown_fields)]` plus newtype
# wrappers that reject `minLength: 1` / regex constraints at
# deserialise time, so we get framework-shape + payload-shape
# validation as a side-effect of typed dispatch. The `validate`
# feature would add JSON-Schema-driven validation against the
# embedded schema string per request — redundant for our consumers
# and a compile-time tax we don't pay. Re-enable if a future spec
# carries constraints not captured by the codegen newtypes.
trust-tasks-rs = { version = "0.2", default-features = false }
trust-tasks-https = { version = "0.2", default-features = false, features = ["server", "client", "jwt"] }
trust-tasks-didcomm = { version = "0.2", default-features = false }
trust-tasks-proof = { version = "0.2", default-features = false, features = ["affinidi"] }
# TSP (Trust Spanning Protocol, ToIP) transport binding for the Trust
# Tasks framework — the sibling of `trust-tasks-didcomm`, built on
# `affinidi-tsp`. Provides the `TransportHandler` impl + pack/unpack for
# TSP-delivered trust-task documents. Moves in lockstep with the rest of
# the `trust-tasks-*` family.
trust-tasks-tsp = { version = "0.2", default-features = false }
# Trust Spanning Protocol implementation for the Affinidi TDK. Consumed
# directly for the outbound TSP send path and VID/envelope helpers; also
# the crate `trust-tasks-tsp` is built on. `messaging-core` pulls the
# protocol-agnostic `affinidi-messaging-core` traits shared with DIDComm.
affinidi-tsp = { version = "0.1", features = ["messaging-core"] }
# Pinned to the same major.minor `trust-tasks-proof`'s `affinidi` feature
# resolves, so the lock keeps a single copy (avoids the crypto-stack diamond).
# Used directly by `did-hosting-common`'s `TransportBoundVerifier` for the
# signature-only-when-issuer-absent path.
affinidi-data-integrity = "0.7"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
