[package]
name = "did-hosting-common"
description = "DID Hosting Common, Common methods and structs related to WebVH Content"
version = "0.8.2"
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["method-webvh", "method-web"]

# ---- DID method support ----
#
# Each `method-*` feature gates a single `DidMethod` impl in
# `src/method/`. The dispatcher (`method_by_name`) is compile-time —
# disabling a feature removes its arm from the dispatcher AND its
# resolution-endpoint route from the router (T25). The default build
# enables `webvh` + `web`; `webs` / `webplus` are scaffolded for future
# work and ship as stubs that fail compile with a clear pointer
# (T31 + T38, gated by `method-webs` / `method-webplus`).

method-webvh = []
method-web = []
method-webs = []
method-webplus = []

metrics = ["server-core", "dep:prometheus"]
server-core = [
    "dep:axum", "dep:axum-extra", "dep:jsonwebtoken", "dep:ed25519-dalek",
    "dep:multibase", "dep:chrono", "dep:rand", "dep:tokio", "dep:tokio-util",
    "dep:tower-http", "dep:tracing-subscriber", "dep:hex",
    "dep:trust-tasks-rs", "dep:trust-tasks-https", "dep:trust-tasks-didcomm",
    "dep:trust-tasks-proof", "dep:affinidi-data-integrity",
    "dep:affinidi-messaging-didcomm-service", "dep:affinidi-messaging-didcomm",
]
store-fjall = ["server-core", "dep:fjall"]
store-redis = ["server-core", "dep:redis"]
store-dynamodb = ["server-core", "dep:aws-sdk-dynamodb", "dep:aws-config"]
store-firestore = ["server-core", "dep:firestore", "dep:futures"]
store-cosmosdb = ["server-core", "dep:azure_data_cosmos", "dep:azure_core", "dep:futures"]
# Native OS keyring secret backend.
#
# Supported targets: macOS, Windows, Linux (and any other Unix with a Secret
# Service implementation reachable over D-Bus). Each backend dep is declared
# under a `[target.'cfg(...)']` block, so on any *unsupported* target the
# feature is harmless to enable but `KeyringSecretStore::try_new` returns
# `AppError::SecretStore("...no native keyring backend available...")`.
keyring = [
    "server-core",
    "dep:keyring-core",
    "dep:apple-native-keyring-store",
    "dep:windows-native-keyring-store",
    "dep:dbus-secret-service-keyring-store",
]
aws-secrets = ["server-core", "dep:aws-sdk-secretsmanager", "dep:aws-config"]
gcp-secrets = ["server-core", "dep:google-cloud-secretmanager-v1", "dep:google-cloud-auth", "dep:bytes"]
azure-secrets = ["server-core", "dep:azure_security_keyvault_secrets", "dep:azure_identity", "dep:azure_core", "dep:futures"]
# HashiCorp Vault (KV v2) secret backend, authenticating via Kubernetes
# ServiceAccount JWT (default), static token, or AppRole.
vault-secrets = ["server-core", "dep:vaultrs"]
# Native Kubernetes `Secret` backend (in-cluster ServiceAccount or local
# kubeconfig via `Client::try_default`).
k8s-secrets = ["server-core", "dep:kube", "dep:k8s-openapi"]
setup-wizard = ["server-core", "dep:dialoguer"]
passkey = ["server-core", "dep:webauthn-rs", "dep:webauthn-rs-proto"]

[dependencies]
affinidi-tdk = { workspace = true }
affinidi-tdk-common = { workspace = true }
affinidi-secrets-resolver = { workspace = true }
affinidi-did-resolver-cache-sdk = { workspace = true }
didwebvh-rs = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
# CIDR matching for the multi-domain `trusted_proxy_cidrs` allowlist
# (see `super::domain::detect`). Single-purpose dep; `cidr` and
# hand-rolled were alternatives — ipnetwork is the most-used in the
# ecosystem and parses RFC-style strings (`10.0.0.0/8`, `2001:db8::/32`)
# without further plumbing.
ipnetwork = "0.21"
vta-sdk = { workspace = true }

# Cross-repo dep on the VTI Verifiable Trust Infrastructure
# foundation crate. We consume only the canonical `Session` and
# `SessionState` types from `vti_common::auth::session`; the
# storage helpers and JWT machinery live on this side of the
# dep boundary because did-hosting has its own KeyspaceHandle
# and AppError abstractions.
#
# 0.7 on crates.io, published 2026-05-24 (OpenVTC PR #113 + #115).
# The git-pinned rev that lived here through the pre-publish
# window is gone.
#
# 0.11.4 re-pins onto vta-sdk ^0.19 + affinidi-tdk ^0.8. Keep in lockstep
# with the workspace `vta-sdk` pin: a mismatched pair resolves to two
# vta-sdk copies and fails to compile (E0308 on the shared auth types).
# The floor is 0.11.4, not 0.11: 0.11.3 added the `Session.last_seen` /
# `acr_expires_at` fields we now construct, and 0.11.4 added the `jti`
# parameter to `AuthBackend::mint_access_token` — an unlocked build
# against an earlier 0.11.x will not compile.
vti-common = { version = "0.11.4", default-features = false }
async-trait = "0.1"

# server-core dependencies (optional)
axum = { version = "0.8", optional = true }
axum-extra = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
multibase = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tower-http = { version = "0.7", features = ["trace", "cors"], optional = true }
tracing-subscriber = { workspace = true, optional = true }
hex = { version = "0.4", optional = true }
toml = "1.0"

# Trust Tasks framework — see workspace Cargo.toml for version pin and
# [patch.crates-io] block. Gated behind `server-core` because the
# dispatcher only runs on the server side; the client (no trust-tasks
# admin surface yet) ignores them. Re-evaluate when we add a typed
# client builder for outbound trust-task documents.
trust-tasks-rs = { workspace = true, optional = true }
trust-tasks-https = { workspace = true, optional = true }
trust-tasks-didcomm = { workspace = true, optional = true }
trust-tasks-proof = { workspace = true, optional = true }
# Direct use by `server::trust_tasks::verifier::TransportBoundVerifier`
# (DataIntegrityProof / VerifyOptions / resolver trait). Same major.minor as
# `trust-tasks-proof`'s `affinidi` feature → single copy in the lock.
affinidi-data-integrity = { workspace = true, optional = true }

# Needed by `server::trust_tasks::send` — the outbound counterpart to the
# inbound dispatcher. It owns the "which transport does this peer speak"
# decision (`didcomm_profile::resolve_transport`, already here) and therefore
# has to be able to actually put bytes on either wire. Both binaries already
# depend on these crates; hosting the helper here is what stops the control
# plane and the server growing two divergent copies of the same rule.
affinidi-messaging-didcomm-service = { workspace = true, optional = true }
affinidi-messaging-didcomm = { workspace = true, optional = true }

# store backends (optional)
fjall = { workspace = true, optional = true }
redis = { version = "1.0", features = ["tokio-comp", "aio"], optional = true }
aws-sdk-dynamodb = { version = "1", optional = true }
firestore = { version = "0.49", optional = true }
futures = { version = "0.3", optional = true }
azure_data_cosmos = { version = "0.36", features = ["key_auth"], optional = true }
azure_core = { version = "1.0", optional = true }

# secret store backends (optional)
keyring-core = { version = "1", optional = true }
aws-sdk-secretsmanager = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
google-cloud-secretmanager-v1 = { version = "1", optional = true }
google-cloud-auth = { version = "1", optional = true }
bytes = { version = "1", optional = true }
azure_security_keyvault_secrets = { version = "1.0", optional = true }
azure_identity = { version = "1.0", optional = true }
# HashiCorp Vault client (vault-secrets feature). KV v2 + Kubernetes /
# token / AppRole auth methods. `rustls` is vaultrs's default TLS backend.
vaultrs = { version = "0.8", optional = true }
# Kubernetes Secret backend (k8s-secrets feature). Reads/writes the
# secrets envelope from a namespaced `Secret` via the in-cluster
# ServiceAccount or a local kubeconfig (`Client::try_default`). The
# generated k8s-openapi API version is fine here — the core/v1 `Secret`
# shape is long-stable.
kube = { version = "4.0", default-features = false, features = ["client", "rustls-tls"], optional = true }
k8s-openapi = { version = "0.28", features = ["latest"], optional = true }

# Setup wizard helper (optional, behind `setup-wizard` feature)
dialoguer = { workspace = true, optional = true }

# passkey / WebAuthn (optional)
webauthn-rs = { workspace = true, optional = true }
webauthn-rs-proto = { workspace = true, optional = true }

# Prometheus metrics (optional, behind `metrics` feature)
prometheus = { version = "0.14", default-features = false, optional = true }

# base64 (needed by firestore/cosmosdb store backends)
base64 = { workspace = true }

# Platform-specific keyring backends (only compiled on the target OS)
[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { version = "1", optional = true }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
# Deterministic versionTime stamps in the fuzz seed-corpus generator
# (`examples/gen_corpus.rs`).
chrono = { workspace = true }
# Trust-Tasks router unit tests use `oneshot()` + raw body collection.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# Test-only stub `ProofVerifier` impls (`AlwaysOkVerifier`,
# `AlwaysErrVerifier`, `PanickingVerifier`) use the
# `#[async_trait::async_trait]` macro to match the trait's
# `async fn verify<P>(...)` shape. Prod code uses `ProofPolicy`
# variants that don't carry a custom verifier impl, so the dep is
# test-only.
async-trait = "0.1"
# `verifier::tests` sign real `eddsa-jcs-2022` Data Integrity proofs with a
# generated ed25519 `did:key` to exercise the bind-when-present /
# signature-only-when-absent paths end-to-end.
affinidi-secrets-resolver = "0.5"
# T51 cross-crate URL invariant test — assert client and daemon
# constants match byte-for-byte. dev-only; doesn't enter the
# production dep graph.
did-hosting-client = { version = "0.1", path = "../did-hosting-client" }
