[package]
name = "did-hosting-control"
description = "WebVH Control Plane — Unified management UI and service registry"
version = "0.7.0"
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
build = "build.rs"

[features]
default = ["keyring", "store-fjall", "ui"]
metrics = ["did-hosting-common/metrics"]
ui = ["dep:rust-embed", "dep:mime_guess"]
keyring = ["did-hosting-common/keyring"]
aws-secrets = ["dep:aws-sdk-secretsmanager", "dep:aws-config", "did-hosting-common/aws-secrets"]
gcp-secrets = [
  "dep:google-cloud-secretmanager-v1",
  "dep:google-cloud-auth",
  "dep:bytes",
  "did-hosting-common/gcp-secrets",
]
azure-secrets = [
  "dep:azure_security_keyvault_secrets",
  "dep:azure_identity",
  "dep:azure_core",
  "dep:futures",
  "did-hosting-common/azure-secrets",
]
store-fjall = ["dep:fjall", "did-hosting-common/store-fjall"]
store-redis = ["dep:redis", "did-hosting-common/store-redis"]
store-dynamodb = ["dep:aws-sdk-dynamodb", "dep:aws-config", "did-hosting-common/store-dynamodb"]
store-firestore = ["dep:firestore", "dep:futures", "did-hosting-common/store-firestore"]
store-cosmosdb = ["dep:azure_data_cosmos", "dep:azure_core", "dep:futures", "did-hosting-common/store-cosmosdb"]
passkey = ["did-hosting-common/passkey"]

[lib]
name = "did_hosting_control"
path = "src/lib.rs"

[[bin]]
name = "did-hosting-control"
path = "src/main.rs"

[dependencies]
did-hosting-common = { version = "0.8", path = "../did-hosting-common", features = ["server-core", "passkey", "setup-wizard"] }
# vti-common consumed transitively via did-hosting-common, but
# this crate also references `vti_common::auth::handlers::*` +
# `AuthenticateInput` directly when dispatching to canonical
# /auth/* handlers. 0.7 on crates.io alongside the did-hosting-
# common dep at the same major.minor.
vti-common = { version = "0.7", default-features = false }
async-trait = "0.1"
# Trust Tasks framework — used by routes/trust_tasks.rs (the
# /api/trust-tasks endpoint introduced in v0.7.1).
trust-tasks-rs = { workspace = true }
trust-tasks-https = { workspace = true }
trust-tasks-didcomm = { workspace = true }
trust-tasks-proof = { workspace = true }
chrono = { workspace = true }
affinidi-tdk = { workspace = true }
affinidi-messaging-didcomm-service = { workspace = true }
affinidi-tdk-common = { workspace = true }
affinidi-messaging-didcomm = { workspace = true }
affinidi-secrets-resolver = { workspace = true }
tokio-util = { workspace = true }
affinidi-did-resolver-cache-sdk = "0.8"
axum = "0.8"
axum-extra = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
ed25519-dalek = { workspace = true }
fjall = { workspace = true, optional = true }
jsonwebtoken = { workspace = true }
multibase = { workspace = true }
rand = { workspace = true }
bip39 = "2"
reqwest = { workspace = true }
url = { workspace = true }
rust-embed = { workspace = true, optional = true }
webauthn-rs = { workspace = true }
mime_guess = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "1.0"
vta-sdk = { workspace = true }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
aws-sdk-secretsmanager = { version = "1", optional = true }
aws-config = { version = "1", features = [
  "behavior-version-latest",
], optional = true }
google-cloud-secretmanager-v1 = { version = "1", optional = true }
google-cloud-auth = { version = "1", optional = true }
bytes = { version = "1", optional = true }
redis = { version = "1.0", features = ["tokio-comp", "aio"], optional = true }
aws-sdk-dynamodb = { version = "1", optional = true }
firestore = { version = "0.48", optional = true }
futures = { version = "0.3", optional = true }
azure_data_cosmos = { version = "0.33", features = [
  "key_auth",
], optional = true }
azure_core = { version = "0.35", optional = true }
azure_security_keyvault_secrets = { version = "0.14", optional = true }
azure_identity = { version = "0.35", optional = true }

[dev-dependencies]
tempfile = "3"
anyhow.workspace = true
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# Embedded mediator fixture for in-process DIDComm flow tests.
# Defaults to MemoryStore (no Redis required); spawns on 127.0.0.1:0.
affinidi-messaging-test-mediator = "0.2"
